--- a/src/bin/pg_config/po/fr.po
+++ b/src/bin/pg_config/po/fr.po
@@ -109,8 +109,7 @@ msgstr "  --docdir              affiche l'emplacement des fichiers de documentat
 #, c-format
 msgid "  --htmldir             show location of HTML documentation files\n"
 msgstr ""
-"  --htmldir             affiche l'emplacement des fichiers de documentation\n"
-"                        HTML\n"
+"  --htmldir             affiche l'emplacement des fichiers de documentation HTML\n"
 
 #: pg_config.c:81
 #, c-format
@@ -125,8 +124,7 @@ msgstr ""
 #, c-format
 msgid "  --pkgincludedir       show location of other C header files\n"
 msgstr ""
-"  --pkgincludedir       affiche l'emplacement des autres fichiers d'en-tête\n"
-"                        C\n"
+"  --pkgincludedir       affiche l'emplacement des autres fichiers d'en-tête C\n"
 
 #: pg_config.c:84
 #, c-format
@@ -185,7 +183,7 @@ msgid ""
 "                        PostgreSQL was built\n"
 msgstr ""
 "  --configure           affiche les options passées au script « configure »\n"
-"                        à la construction de PostgreSQL\n"
+"                        lors de la construction de PostgreSQL\n"
 
 #: pg_config.c:94
 #, c-format
@@ -272,7 +270,7 @@ msgstr "Rapporter les bogues à <%s>.\n"
 #: pg_config.c:106
 #, c-format
 msgid "%s home page: <%s>\n"
-msgstr "page d'accueil %s : %s\n"
+msgstr "Page d'accueil de %s : <%s>\n"
 
 #: pg_config.c:112
 #, c-format
@@ -282,7 +280,7 @@ msgstr "Essayer « %s --help » pour plus d'informations.\n"
 #: pg_config.c:154
 #, c-format
 msgid "%s: could not find own program executable\n"
-msgstr "%s : n'a pas pu trouver son propre exécutable\n"
+msgstr "%s : n'a pas pu trouver l'exécutable du programme\n"
 
 #: pg_config.c:181
 #, c-format
