--- a/src/bin/scripts/po/de.po
+++ b/src/bin/scripts/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PostgreSQL 13\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
-"POT-Creation-Date: 2021-07-22 03:58+0000\n"
-"PO-Revision-Date: 2021-04-18 21:32+0200\n"
+"POT-Creation-Date: 2021-11-05 15:58+0000\n"
+"PO-Revision-Date: 2021-11-06 10:46+0100\n"
 "Last-Translator: Peter Eisentraut <peter@eisentraut.org>\n"
 "Language-Team: German <pgsql-translators@postgresql.org>\n"
 "Language: de\n"
@@ -937,8 +937,8 @@ msgstr ""
 
 #: reindexdb.c:760
 #, c-format
-msgid "  -s, --system              reindex system catalogs\n"
-msgstr "  -s, --system              Systemkataloge reindizieren\n"
+msgid "  -s, --system              reindex system catalogs only\n"
+msgstr "  -s, --system              nur Systemkataloge reindizieren\n"
 
 #: reindexdb.c:761
 #, c-format
