--- a/src/interfaces/libpq/po/fr.po
+++ b/src/interfaces/libpq/po/fr.po
@@ -134,7 +134,7 @@ msgstr "requête d'authentification SSPI dupliquée\n"
 
 #: fe-auth.c:374
 msgid "could not acquire SSPI credentials"
-msgstr "n'a pas pu récupérer les pièces d'identité SSPI"
+msgstr "n'a pas pu obtenir les pièces d'identité SSPI"
 
 #: fe-auth.c:429
 msgid "channel binding required, but SSL not in use\n"
@@ -211,7 +211,7 @@ msgstr "méthode d'authentification %u non supportée\n"
 #: fe-auth.c:1104
 #, c-format
 msgid "user name lookup failure: error code %lu\n"
-msgstr "échec de la recherche du nom d'utilisateur : code erreur %lu\n"
+msgstr "échec de la recherche du nom d'utilisateur : code d'erreur %lu\n"
 
 #: fe-auth.c:1114 fe-connect.c:2834
 #, c-format
@@ -1086,11 +1086,11 @@ msgstr "n'a pas pu récupérer le nom d'hôte du serveur à partir du certificat
 
 #: fe-secure-gssapi.c:201
 msgid "GSSAPI wrap error"
-msgstr "erreur wrap GSSAPI"
+msgstr "erreur d'emballage GSSAPI"
 
 #: fe-secure-gssapi.c:209
 msgid "outgoing GSSAPI message would not use confidentiality\n"
-msgstr "le message sortant GSSAPI n'utilisera pas la confidentialité\n"
+msgstr "le message sortant GSSAPI n'utiliserait pas la confidentialité\n"
 
 #: fe-secure-gssapi.c:217
 #, c-format
@@ -1104,11 +1104,11 @@ msgstr "paquet GSSAPI trop gros envoyé par le serveur (%zu > %zu)\n"
 
 #: fe-secure-gssapi.c:393
 msgid "GSSAPI unwrap error"
-msgstr "erreur unwrap GSSAPI"
+msgstr "erreur de dépaquetage GSSAPI"
 
 #: fe-secure-gssapi.c:403
 msgid "incoming GSSAPI message did not use confidentiality\n"
-msgstr "le message entrant GSSAPI n'utilisait pas la confidentialité\n"
+msgstr "le message entrant GSSAPI n'a pas utilisé pas la confidentialité\n"
 
 #: fe-secure-gssapi.c:642
 msgid "could not initiate GSSAPI security context"
@@ -1287,7 +1287,7 @@ msgstr "aucune erreur SSL reportée"
 #: fe-secure-openssl.c:1471
 #, c-format
 msgid "SSL error code %lu"
-msgstr "erreur SSL %lu"
+msgstr "code d'erreur SSL %lu"
 
 #: fe-secure-openssl.c:1718
 #, c-format
