--- a/src/backend/po/ru.po
+++ b/src/backend/po/ru.po
@@ -3157,7 +3157,7 @@ msgstr ""
 
 #: access/transam/xlog.c:10386
 #, c-format
-msgid "sucessfully skipped missing contrecord at %X/%X, overwritten at %s"
+msgid "successfully skipped missing contrecord at %X/%X, overwritten at %s"
 msgstr ""
 "успешно пропущена отсутствующая запись contrecord в %X/%X, перезаписанная в "
 "%s"
